--- a/index.html
+++ b/index.html
@@ -2836,8 +2836,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div> 
                 <span data-action="toggle-nav" class="action nav-toggle"><span>Toggle Nav</span></span> 
                 <a class="logo" href="https://burberry.iprpshields.com/" title="Routine" aria-label="store logo">
-                    <img class="logo-white lazyOwl" src="Image/Logo/burberry.jpg" title="Routine" alt="Routine" width="170"  />
-                    <img class="logo-dark lazyOwl" src="Image/Logo/burberry.jpg" title="Routine" alt="Routine" width="170"  /></a>
+                    <img class="logo-white lazyOwl" src="" title="Routine" alt="Routine" width="170"  />
+                    <img class="logo-dark lazyOwl" src="" title="Routine" alt="Routine" width="170"  /></a>
                 <div
                     class="header-content-right">
                     <div class="block block-search" data-mage-init=' { "collapsible": { "openedState": "active", "collapsible": true, "active": false, "collateral": { "openedState": "search-active", "element": "body" } } }'>
@@ -2846,8 +2846,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <div class="block-search-container">
                                     <div class="search-logo"> <span data-action="toggle-nav" class="action nav-toggle"><span>Toggle Nav</span></span> 
                                         <a class="logo" href="https://burberry.iprpshields.com/" title="Routine" aria-label="store logo">
-                                            <img class="logo-white lazyOwl" src="Image/Logo/burberry.jpg" title="Routine" alt="Routine"   />
-                                            <img class="logo-dark lazyOwl" src="Image/Logo/burberry.jpg" title="Routine" alt="Routine"   /></a>
+                                            <img class="logo-white lazyOwl" src="" title="Routine" alt="Routine"   />
+                                            <img class="logo-dark lazyOwl" src="" title="Routine" alt="Routine"   /></a>
                                     </div>
                             </div>
                         </div>
